--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
